baml_language/crates/baml_tests/snapshots/diagnostic_errors/optional_parameter_defaults/baml_tests__diagnostic_errors__optional_parameter_defaults__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.BadDefaultPositional() -> string  [expr] {
  {  } Search("cats", 5)
}
function user.BadDuplicateNamed() -> string  [expr] {
  {  } Search(query = "cats", max_results = 1, max_results = 2)
}
function user.BadForwardRef(a: int = b, b: int = 1) -> int  [expr] {
  {  } a
}
function user.BadPositionalAfterNamed() -> string  [expr] {
  {  } Search(query = "cats", 5)
}
function user.BadRequiredAfterDefault(a: int = 1, b: int) -> int  [expr] {
  {  } b
}
function user.BadUnknownNamed() -> string  [expr] {
  {  } Search(q = "cats")
}
function user.OkNamedDefault() -> string  [expr] {
  {  } Search("cats", max_results = 5)
}
function user.OkNamedRequired() -> string  [expr] {
  {  } Search(query = "cats")
}
function user.OkOmit() -> string  [expr] {
  {  } Search("cats")
}
function user.OkSkipFirstDefault() -> string  [expr] {
  {  } Search("cats", filter = "recent")
}
function user.Search(query: string, max_results: int = 10, filter: string = "none") -> string  [expr] {
  {  } query
}
class user.Counter {
  value: int
}
class user.Counter$stream {
  value: int | null
}
type user.NamedFilter = (query: string, filter?: string?) -> int throws never
type user.NamedFilter$stream = unknown
type user.NamedLimit = (query: string, limit?: string?) -> int throws never
type user.NamedLimit$stream = unknown
function user.Current(self: ? = null) -> int  [expr] {
  {  } self.value
}
function user.Filtered(query: string, filter: string? = null) -> int  [expr] {
  {  } query.length()
}
function user.LambdaDefault() -> int  [expr] {
  { let f = (x: int = 1) -> int { {  } x } } f(2)
}
function user.OptionalNameMismatch() -> int  [expr] {
  { let f: user.NamedLimit = Filtered } f("cats", limit = "recent")
}
