baml_language/crates/baml_tests/snapshots/diagnostic_errors/optional_parameter_defaults/baml_tests__diagnostic_errors__optional_parameter_defaults__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 36420
---
=== TIR2 ===
function user.Search(query: string, max_results: int = 10, filter: string = "none") -> string throws never {
  { : string
    query : string
  }
}
function user.OkOmit() -> string throws never {
  { : string
    Search("cats") : string
  }
}
function user.OkNamedDefault() -> string throws never {
  { : string
    Search("cats", max_results = 5) : string
  }
}
function user.OkNamedRequired() -> string throws never {
  { : string
    Search(query = "cats") : string
  }
}
function user.OkSkipFirstDefault() -> string throws never {
  { : string
    Search("cats", filter = "recent") : string
  }
}
function user.BadDefaultPositional() -> string throws never {
  { : string
    Search("cats", 5) : string
  }
  !! 436..437: defaulted parameter `max_results` must be passed by name
}
function user.BadPositionalAfterNamed() -> string throws never {
  { : string
    Search(query = "cats", 5) : string
  }
  !! 514..515: positional arguments cannot appear after named arguments
}
function user.BadDuplicateNamed() -> string throws never {
  { : string
    Search(query = "cats", max_results = 1, max_results = 2) : string
  }
  !! 617..618: duplicate named argument `max_results`
}
function user.BadUnknownNamed() -> string throws never {
  { : string
    Search(q = "cats") : string
  }
  !! 675..681: unknown named argument `q`
  !! 664..682: missing required argument `query`
}
function user.BadForwardRef(a: int = b, b: int = 1) -> int throws never {
  { : int
    a : int
  }
  !! 718..719: default for parameter `a` cannot reference later parameter `b`
}
function user.BadRequiredAfterDefault(a: int = 1, b: int) -> int throws never {
  { : int
    b : int
  }
  !! 793..800: required parameter `b` cannot appear after a defaulted parameter
}
type user.NamedFilter = (query: string, filter?: string?) -> int throws never
type user.NamedLimit = (query: string, limit?: string?) -> int throws never
class user.Counter {
  value: int
}
function user.Counter.Current(self: user.Counter = null) -> int throws never {
  { : int
    self.value : int
  }
  !! 245..249: `self` cannot have a default value
}
function user.LambdaDefault() -> int throws never {
  { : int
    let f = : (x: int) -> int throws never
      (x: int = 1) -> int { ... } : (x: int) -> int throws never
        {
          x
        }
    f(2) : int
  }
}
lambda user.LambdaDefault {
}
function user.Filtered(query: string, filter: string? = null) -> int throws never {
  { : int
    query.length() : int
  }
}
function user.OptionalNameMismatch() -> int throws never {
  { : int
    let f: NamedLimit = Filtered : (query: string, filter?: string?) -> int throws never -> user.NamedLimit
    f("cats", limit = "recent") : int
  }
  !! 511..519: type mismatch: expected user.NamedLimit, got (query: string, filter?: string?) -> int throws never
}
type user.NamedFilter$stream = unknown
type user.NamedLimit$stream = unknown
class user.Counter$stream {
  value: null | int
}
