baml_language/crates/baml_tests/snapshots/diagnostic_errors/optional_parameter_defaults/baml_tests__diagnostic_errors__optional_parameter_defaults__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 36483
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: defaulted parameter `max_results` must be passed by name
    ╭─[ call_binding.baml:22:18 ]
    │
 22 │   Search("cats", 5)
    │                  ┬  
    │                  ╰── defaulted parameter `max_results` must be passed by name
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: positional arguments cannot appear after named arguments
    ╭─[ call_binding.baml:26:26 ]
    │
 26 │   Search(query = "cats", 5)
    │                          ┬  
    │                          ╰── positional arguments cannot appear after named arguments
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: duplicate named argument `max_results`
    ╭─[ call_binding.baml:30:57 ]
    │
 30 │   Search(query = "cats", max_results = 1, max_results = 2)
    │                                                         ┬  
    │                                                         ╰── duplicate named argument `max_results`
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: missing required argument `query`
    ╭─[ call_binding.baml:34:3 ]
    │
 34 │   Search(q = "cats")
    │   ─────────┬────────  
    │            ╰────────── missing required argument `query`
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: unknown named argument `q`
    ╭─[ call_binding.baml:34:14 ]
    │
 34 │   Search(q = "cats")
    │              ───┬──  
    │                 ╰──── unknown named argument `q`
    │ 
    │ Note: Error code: E0005
────╯

  [type] Error: default for parameter `a` cannot reference later parameter `b`
    ╭─[ call_binding.baml:37:33 ]
    │
 37 │ function BadForwardRef(a: int = b, b: int = 1) -> int {
    │                                 ┬  
    │                                 ╰── default for parameter `a` cannot reference later parameter `b`
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: required parameter `b` cannot appear after a defaulted parameter
    ╭─[ call_binding.baml:41:45 ]
    │
 41 │ function BadRequiredAfterDefault(a: int = 1, b: int) -> int {
    │                                             ───┬───  
    │                                                ╰───── required parameter `b` cannot appear after a defaulted parameter
    │ 
    │ Note: Error code: E0001
────╯

  [hir] Error: parameter defaults are not supported in template_string `Greeting`
   ╭─[ unsupported_contexts.baml:1:41 ]
   │
 1 │ template_string Greeting(name: string = "world") #"hello {{ name }}"#
   │                                         ───┬───  
   │                                            ╰───── default value is not allowed here
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: `self` cannot have a default value
   ╭─[ unsupported_contexts.baml:9:27 ]
   │
 9 │   function Current(self = null) -> int {
   │                           ──┬─  
   │                             ╰─── `self` cannot have a default value
   │ 
   │ Note: Error code: E0001
───╯

  [hir] Error: parameter defaults are not supported in lambda parameters
    ╭─[ unsupported_contexts.baml:15:21 ]
    │
 15 │   let f = (x: int = 1) -> int { x }
    │                     ┬  
    │                     ╰── default value is not allowed here
    │ 
    │ Note: Error code: E0010
────╯

  [type] Error: type mismatch: expected user.NamedLimit, got (query: string, filter?: string?) -> int throws never
    ╭─[ unsupported_contexts.baml:24:23 ]
    │
 24 │   let f: NamedLimit = Filtered
    │                       ────┬───  
    │                           ╰───── type mismatch: expected user.NamedLimit, got (query: string, filter?: string?) -> int throws never
    │ 
    │ Note: Error code: E0001
────╯
